Fixed form overflowing, removed datepicker from dashboard and replaced it with a dropdown, added a new page with just the datepicker

--- a/src/djgap/static/djgap/css/dash.css
+++ b/src/djgap/static/djgap/css/dash.css
@@ -678,6 +678,10 @@ li {
     min-width: 24%;
 }
 
+.startDate {
+    padding-bottom: 3.5px;
+}
+
 .score {
     width: 5%;
     min-width: 5%;
@@ -770,3 +774,4 @@ tr:hover .cell{
 #saveNoti:hover{
     filter: invert(100%);
 }
+
